2006-06-13  Roland Dreier  <rdreier@cisco.com>

	* Release version 1.0.2.

2006-06-13  Michael S. Tsirkin  <mst@mellanox.co.il>

	* src/cq.c (mthca_poll_one): Add workaround for MemFree FW bug
	that causes wrong WQE addr to be reported.

2006-05-24  Roland Dreier  <rdreier@cisco.com>

	* src/mthca.c: If <sysfs/libsysfs.h> is detected, include it
	explicitly.  This lets things build when sysfs headers are
	installed on the build system even when building against
	libibverbs 1.1 (which does not include sysfs headers implicitly).

	* src/ah.c, src/cq.c, src/memfree.c, src/mthca.c, src/qp.c,
	src/srq.c: Add include of <string.h>, since it may no long be
	implicitly included from libsysfs headers when building with
	libibverbs 1.1.

2006-05-24  Michael S. Tsirkin  <mst@mellanox.co.il>

	* src/srq.c (mthca_tavor_post_srq_recv): Fix posting of lists of
	receives that have exactly a multiple of 256 entries (same as QP
	bug fixed below).

2006-05-22  Roland Dreier  <rdreier@cisco.com>

	* configure.in, src/mthca.c (openib_driver_init): Check for the
	presence of <sysfs/libsysfs.h>, and if it is not installed, don't
	export the old openib_driver_init() entry point.

2006-05-18  Michael S. Tsirkin  <mst@mellanox.co.il>

	* src/qp.c (mthca_tavor_post_recv): Fix posting of lists of
	receives that have exactly a multiple of 256 entries.

2006-05-08  Jack Morgenstein  <jackm@mellanox.co.il>

	* src/mthca.c: Add include files needed for open() if
	HAVE_IBV_READ_SYSFS_FILE is not defined (so libmthca includes a
	private local definition of ibv_read_sysfs_file()).

2006-04-11  Roland Dreier  <rdreier@cisco.com>

	* src/mthca.c (ibv_driver_init, openib_driver_init): Add new
	forward-compatible driver entry point.  Make old entry point a
	simple wrapper for the new one.

2006-03-14  Roland Dreier  <rdreier@cisco.com>

	* Release version 1.0.1.

	* Makefile.am (EXTRA_DIST): Remove debian/ directory from
	tarballs, since Debian policy is that upstream tarballs should not
	include it.
